# Copyright (c) 2023, Centre National d'Etudes Spatiales (CNES)
#
# This file is part of cars-rasterize
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# cars-rasterize setup configuration file

# package setup main metadata
[metadata]
name = cars-rasterize
author = CNES
author_email = cars@cnes.fr
url = https://github.com/CNES/cars-rasterize
description = Convert a point cloud into a digital surface (or terrain) model with colors.
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache Software License 2.0
license_files = LICENSE
platform = any
keywords: cars-rasterize, 3D, DEM, cars, pandora, photogrammetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8


# Packages dependencies
install_requires =
    argparse                      # Python Argument Parser
    argcomplete                   # Autocompletion Argparse
    rasterio>1.1.3
    pandas
    laspy[laszip]

package_dir =
    . = cars-rasterize
packages = find:

[options.extras_require]
# [dev] mode dependencies
dev =
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8>=3.9.1                 # General linter
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint                        # General linter
    setuptools_scm                # versions from git tag
    virtualenv
    configupdater
    twine                         # for pypi upload
    pytest
    pytest-cov
    tox
    mypy
    pybind11>=2.10.0

# deploy data from the designed directory into package
[options.package_data]
    cars-rasterize = data/*

# entry points cli scripts
[options.entry_points]
console_scripts =
    las2tif = cars_rasterize.las2tif:console_script

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output, docs
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 80
#show-source = true
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B
